Issue #3269839: Increase selector specifity to avoid dialog misalignment

--- a/styles/components/dialog.scss
+++ b/styles/components/dialog.scss
@@ -33,6 +33,9 @@
 }
 
 .ui-dialog {
+  font-family: var(--ginFont);
+  outline: none;
+
   &,
   &:focus,
   &:focus:active,
@@ -81,10 +84,11 @@
   .ui-dialog-titlebar-close {
     inset-block-start: 20px;
     inset-inline-end: 18px;
-    border: none;
     opacity: .8;
-    transform: none;
     margin: 0;
+    transform: none;
+    background: none;
+    border: none;
 
     .ui-icon-closethick {
       inline-size: 100%;
